@@ -384,7 +384,4 @@ Puede servir para versión online simple. Salida pnm y entrada de texto
 -comandos reset midi no hace nada?? Solo van en windows. Quiza enviar mejor un noteoff
 
 
--esxdos handler que guarde ruta actual (el cwd de esxdos) en la config? 
-
-
 -Incluir playmid y algunos mid de ejemplo en la imagen de zxuno mmc: moonlight shadow, ....
