@@ -3,7 +3,10 @@ Version 8.2 - xxx edition. 16 March 2020
 Added F key to toggle top cpu speed
 Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
 Fixed esxdos handler segfaults when using a file handler that was a directory
-Esxdos handler: add f_mkdir function 
+Esxdos handler: 
+-add f_mkdir function 
+-add configuration setting to save local work directory
+
 Fixed rom loading: no more cpu panic when the rom is not found 
 
 
